Remove os-testr from requirements
The community moves towards standardizing around stestr, so
lets drop all the other variants.

Change-Id: I85924171b1c75f082d2e85ff46e56162587c6c41

--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -39,7 +39,6 @@ BuildRequires:  {{ py2pkg('lxml') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('python-novaclient') }}
 BuildRequires:  {{ py2pkg('os-brick') }}
-BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('os-win') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.db') }}
@@ -293,7 +292,7 @@ rm -rf %{buildroot}%{_prefix}/%{_sysconfdir}
 exit 0
 
 %check
-# OS_TEST_PATH=./cinder/tests/unit PYTHONPATH=. ostestr
+stestr run
 
 
 %post api
