--- a/openstack/monasca-transform/monasca-transform.spec.j2
+++ b/openstack/monasca-transform/monasca-transform.spec.j2
@@ -26,7 +26,6 @@ BuildRequires:  {{ py2pkg('kazoo') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('monasca-common') }}
 BuildRequires:  {{ py2pkg('nose') }}
-BuildRequires:  {{ py2pkg('os-testr') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.service') }}
@@ -35,6 +34,7 @@ BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('psutil') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('six') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('tooz') }}
 BuildRequires:  zip
@@ -137,7 +137,7 @@ crudini --set %{mon_trans_conf} service spark_python_files %{_datadir}/%{sname}/
 %check
 # automated tests need to be restricted, as functional tests require running Spark
 find . -type f -name *.pyc -delete
-ostestr
+python2 -m stestr.cli run
 
 %pre
 # create user and groups
