--- a/openstack/sushy/sushy.spec.j2
+++ b/openstack/sushy/sushy.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'sushy' %}
-{% set upstream_version = upstream_version('1.3.2') %}
+{% set upstream_version = upstream_version('1.6.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -20,7 +20,7 @@ BuildRequires:  {{ py2pkg('reno', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('pbr') }}
@@ -56,9 +56,7 @@ rm -rf html/.{doctrees,buildinfo}
 %{python_install}
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py test
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
