--- a/openstack/os-refresh-config/os-refresh-config.spec.j2
+++ b/openstack/os-refresh-config/os-refresh-config.spec.j2
@@ -1,6 +1,6 @@
 %global sname os-refresh-config
 Name:           {{ py2name('os-refresh-config') }}
-Version:        9.0.0
+Version:        9.1.0
 Release:        0
 Summary:        Refresh system configuration
 License:        {{ license('Apache-2.0') }}
@@ -15,7 +15,7 @@ BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('psutil') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
-BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('dib-utils') }}
@@ -42,7 +42,7 @@ install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/migration.d
 install -d -m 755 %{buildroot}%{_libexecdir}/%{name}/post-configure.d
 
 %check
-%{__python2} setup.py testr
+%{__python2} -m stestr.cli run
 
 %files
 %license LICENSE
