--- a/openstack/python-tackerclient/python-tackerclient.spec.j2
+++ b/openstack/python-tackerclient/python-tackerclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-tackerclient
 Name:           {{ py2name('python-tackerclient') }}
-Version:        0.12.0
+Version:        0.14.0
 Release:        0
 Summary:        Client API library for Tacker
 License:        {{ license('Apache-2.0') }}
@@ -17,7 +17,7 @@ BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
-BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('cliff') }}
@@ -59,13 +59,13 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 # Build HTML docs and man page
 %{__python2} setup.py build_sphinx --builder=html,man
-rm -rf html/.{doctrees,buildinfo}
+rm -rf build/sphinx/html/.{doctrees,buildinfo}
 
 %install
 %{py2_install}
 
 %check
-%{__python2} setup.py testr
+%{__python2} -m stestr.cli run
 
 %files
 %doc README.rst
@@ -75,7 +75,7 @@ rm -rf html/.{doctrees,buildinfo}
 %{_bindir}/tacker
 
 %files doc
-%doc doc/build/html
+%doc build/sphinx/html
 %license LICENSE
 
 %changelog
