--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -1,7 +1,7 @@
 %global sname tripleo-common
-%global sversion 9.2.0
+%global sversion 9.3.0
 Name:           {{ py2name('tripleo-common') }}
-Version:        9.2.0
+Version:        9.3.0
 Release:        0
 Summary:        Python library for code used by TripleO projects
 License:        {{ license('Apache-2.0') }}
@@ -112,6 +112,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{_bindir}/bootstrap_host_exec
 %{_bindir}/bootstrap_host_only_exec
 %{_bindir}/bootstrap_host_only_eval
+%{_bindir}/tripleo-container-image-prepare
 %{_datadir}/%{sname}
 %{_datadir}/ansible
 
