use stestr for os-brick
Also, we are seeing random CI failures due to concurrency. Stestr is
running in parallel by default. See

https://stestr.readthedocs.io/en/latest/MANUAL.html#parallel-testing

This is problematic for time sensitive tests such as this one

https://github.com/openstack/os-brick/blob/master/os_brick/tests/
privileged/test_rootwrap.py#L101

where the thread can be interrupted prior to final time measurement.
This may cause the test to fail randomly. Therefore, we need to
run the tests with the concurrency of 1 to avoid these kinds of
unpredictable failures.

Change-Id: I41e49dab34a92163f7ffc5951cd98a8a88ba02e0
(cherry picked from commit d6b8f41c9605a9942cfe7a61ccafbfb7461c87b2)

--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -18,7 +18,6 @@ BuildRequires:  {{ py2pkg('Babel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('castellan', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('ddt', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('eventlet', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('os-testr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('os-win', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.concurrency', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
@@ -34,7 +33,7 @@ BuildRequires:  {{ py2pkg('reno', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('retrying', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       %{oldpython}-os-brick-common
@@ -97,9 +96,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 mv %{buildroot}%{_prefix}%{_sysconfdir}/* %{buildroot}/%{_sysconfdir}/
 
 %check
-%{python_expand rm -rf .testrepository
-PYTHON=$python $python setup.py test
-}
+%python_exec -m stestr.cli run --concurrency=1
 
 %files %{python_files}
 %license LICENSE
