freezer: fix location of config generator file
The file was moved[1].

[1] https://review.openstack.org/599877

Change-Id: I60398f02927a465b1e7ad023fb7e434b455fcc71
(cherry picked from commit 30997d130495f81d557428775e502d8a525f171e)

--- a/openstack/freezer/freezer.spec.j2
+++ b/openstack/freezer/freezer.spec.j2
@@ -144,7 +144,7 @@ PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/htm
 rm -rf doc/build/html/.{doctrees,buildinfo}
 %fdupes doc/build/html/
 # config file generation
-PYTHONPATH=. oslo-config-generator --config-file config-generator/scheduler.conf \
+PYTHONPATH=. oslo-config-generator --config-file etc/config-generator.conf \
     --output-file etc/scheduler.conf.sample
 
 %install
