Switch tempest plugins to stable/rocky release versions
Change-Id: I130b095780160c07e945d33951269f38cb95ef42

--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -1,7 +1,7 @@
 %global sname tempest
 Name:           {{ py2name('Tempest') }}
 Epoch:          {{ epoch('Tempest') }}
-Version:        18.0.0
+Version:        19.0.0
 Release:        0
 Summary:        The OpenStack Integration Test Suite
 License:        {{ license('Apache-2.0') }}
@@ -90,9 +90,9 @@ mv %{buildroot}/%{_prefix}/%{_sysconfdir}/%{sname}/logging.conf.sample %{buildro
 mv %{buildroot}/%{_prefix}/%{_sysconfdir}/%{sname}/whitelist.yaml %{buildroot}/%{_sysconfdir}/%{sname}/whitelist.yaml
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
-###rm -rf doc/build/html/.{doctrees,buildinfo}
+rm -rf doc/build/html/.{doctrees,buildinfo}
 
 ##%check
 ##export OS_TEST_PATH=./tempest/tests
