--- a/openstack/barbican-tempest-plugin/barbican-tempest-plugin.spec.j2
+++ b/openstack/barbican-tempest-plugin/barbican-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'barbican-tempest-plugin' %}
-{% set source=fetch_source('https://tarballs.openstack.org/barbican-tempest-plugin/barbican-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source = fetch_source('https://tarballs.openstack.org/barbican-tempest-plugin/barbican_tempest_plugin-0.1.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.1.0') %}
 {% set rpm_release = '1' %}
 
 %global sname barbican_tempest_plugin
