--- a/openstack/heat-tempest-plugin/heat-tempest-plugin.spec.j2
+++ b/openstack/heat-tempest-plugin/heat-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'heat-tempest-plugin' %}
-{% set source=fetch_source('https://tarballs.openstack.org/heat-tempest-plugin/heat-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source=fetch_source('https://tarballs.openstack.org/heat-tempest-plugin/heat-tempest-plugin-0.2.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.2.0') %}
 {% set rpm_release = '1' %}
 
 %global sname heat_tempest_plugin
