--- a/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
+++ b/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'monasca-tempest-plugin' %}
-{% set source=fetch_source('https://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source=fetch_source('https://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-0.1.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.1.0') %}
 {% set rpm_release = '1' %}
 
 %global sname monasca_tempest_plugin
