--- a/openstack/zaqar-tempest-plugin/zaqar-tempest-plugin.spec.j2
+++ b/openstack/zaqar-tempest-plugin/zaqar-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'zaqar-tempest-plugin' %}
-{% set source = fetch_source('https://tarballs.openstack.org/zaqar-tempest-plugin/zaqar-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source = fetch_source('https://tarballs.openstack.org/zaqar-tempest-plugin/zaqar_tempest_plugin-0.1.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.1.0') %}
 {% set rpm_release = '1' %}
 
 %global pname zaqar_tempest_plugin
