--- a/openstack/designate-tempest-plugin/designate-tempest-plugin.spec.j2
+++ b/openstack/designate-tempest-plugin/designate-tempest-plugin.spec.j2
@@ -1,7 +1,7 @@
 {% set pypi_name = 'designate-tempest-plugin' %}
 {% set rpm_release = '1' %}
-{% set source=fetch_source('https://tarballs.openstack.org/designate-tempest-plugin/designate-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source=fetch_source('https://tarballs.openstack.org/designate-tempest-plugin/designate-tempest-plugin-0.5.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.5.0') %}
 
 %global sname designate-tempest-plugin
 %global with_doc 0
