--- a/openstack/magnum-tempest-plugin/magnum-tempest-plugin.spec.j2
+++ b/openstack/magnum-tempest-plugin/magnum-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'magnum-tempest-plugin' %}
-{% set source = fetch_source('https://tarballs.openstack.org/magnum-tempest-plugin/magnum-tempest-plugin-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set source = fetch_source('https://tarballs.openstack.org/magnum-tempest-plugin/magnum_tempest_plugin-0.1.0.tar.gz') %}
+{% set upstream_version = upstream_version('0.1.0') %}
 {% set rpm_release = '1' %}
 
 %global with_doc 0
