sushy: Remove self reference wording in summary
The openSUSE review team prefers summaries that are not overly
repetitive

Change-Id: Icb21ee7a9861cd44640f9b003f9ef21faa5ab041

--- a/openstack/sushy/sushy.spec.j2
+++ b/openstack/sushy/sushy.spec.j2
@@ -6,7 +6,7 @@
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
-Summary:        Sushy is a small Python library to communicate with Redfish based systems
+Summary:        Python library to communicate with Redfish based systems
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://docs.openstack.org/{{ pypi_name }}
