--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -135,8 +135,8 @@ install -d -m 755 %{buildroot}%{_sysconfdir}/monasca
 install -d -m 750 %{buildroot}%{_sysconfdir}/monasca/agent/conf.d
 
 # /usr/lib
-install -d -m 750 %{buildroot}%{_prefix}/lib/monasca/agent/custom_checks.d
-install -d -m 750 %{buildroot}%{_prefix}/lib/monasca/agent/custom_detect.d
+install -d -m 755 %{buildroot}%{_prefix}/lib/monasca/agent/custom_checks.d
+install -d -m 755 %{buildroot}%{_prefix}/lib/monasca/agent/custom_detect.d
 
 # /var
 install -d -m 750  %{buildroot}%{_localstatedir}/log/%{sname}
@@ -180,6 +180,8 @@ python setup.py test
 %dir %attr(-, root, monasca) %{_sysconfdir}/monasca
 %dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent
 %dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent/conf.d
+%dir %attr(0755, root, root) %{_prefix}/lib/monasca/agent/custom_checks.d
+%dir %attr(0755, root, root) %{_prefix}/lib/monasca/agent/custom_detect.d
 %_tmpfilesdir/openstack-monasca-agent.conf
 %config %{_sysconfdir}/monasca/agent
 %config %{_sysconfdir}/sudoers.d/%{name}
