Remove biased filler wording from spec file

--- a/openstack/automaton/automaton.spec.j2
+++ b/openstack/automaton/automaton.spec.j2
@@ -6,7 +6,7 @@
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
-Summary:        Friendly state machines for python
+Summary:        State machines for python
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
@@ -29,7 +29,7 @@ BuildArch:      noarch
 %python_subpackages
 
 %description
-Friendly state machines for python.
+State machines for python.
 
 %package -n python-automaton-doc
 Summary:        Documentation for the Automaton Library
