--- a/openstack/ovsdbapp/ovsdbapp.spec.j2
+++ b/openstack/ovsdbapp/ovsdbapp.spec.j2
@@ -28,7 +28,7 @@ BuildArch:      noarch
 %description
 The ovdsbapp library is useful for creating applications that communicate via
 Open_vSwitchs OVSDB protocol (https://tools.ietf.org/html/rfc7047). It wraps
-the Python 'ovs' and adds an event loop and friendly transactions.
+the Python 'ovs' and adds an event loop and transactions.
 
 %package doc
 Summary:        Documentation for OpenStack log library
