Add fdupes to fix rpmlint error dring build failures.
Change-Id: Id3bb7c28f9ccb156efc4b940074f3951b5162462
(cherry picked from commit ec73955c23bf51b6000dab78bb100f6cc422161c)

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -33,6 +33,7 @@ Source1:        %{name}-sudoers
 Source2:        %{name}.service
 Source3:        %{name}.tmpfiles
 Source4:        %{name}.polkit
+BuildRequires:  fdupes
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
@@ -156,6 +157,8 @@ install -D -m 644 %{SOURCE3} %{buildroot}%{_tmpfilesdir}/openstack-monasca-agent
 
 # polkit permissions
 install -D -m 644 %{SOURCE4} %{buildroot}%{_sysconfdir}/polkit-1/rules.d/49-monasca-agent.rules
+
+%fdupes %{buildroot}%{python2_sitelib}
 
 %pre
 # create user and groups
