--- a/openstack/osprofiler/osprofiler.spec.j2
+++ b/openstack/osprofiler/osprofiler.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'osprofiler' %}
-{% set upstream_version = upstream_version('2.3.0') %}
+{% set upstream_version = upstream_version('2.4.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -16,6 +16,7 @@ BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('PrettyTable', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('WebOb', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('ddt', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('docutils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('elasticsearch', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.concurrency', py_versions=['py2', 'py3']) }}
@@ -26,7 +27,7 @@ BuildRequires:  {{ py2pkg('pymongo', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('redis', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PrettyTable') }}
 Requires:       {{ py2pkg('WebOb') }}
@@ -86,9 +87,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative osprofiler
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr --testr-args '(?!^osprofiler.tests.unit.drivers.test_jaeger.JaegerTestCase.*$)(^.*$)'
-}
+%python_exec -m stestr.cli run --black-regex '(^osprofiler.tests.unit.drivers.test_jaeger.JaegerTestCase.*$)'
 
 %files %{python_files}
 %license LICENSE
