--- a/openstack/oslo.reports/oslo.reports.spec.j2
+++ b/openstack/oslo.reports/oslo.reports.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.reports' %}
-{% set upstream_version = upstream_version('1.28.0') %}
+{% set upstream_version = upstream_version('1.29.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -12,7 +12,6 @@ Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
 # https://review.openstack.org/588088
-Patch0:         0001-Update-unit-test-to-reflect-latest-oslo.config.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('Jinja2', py_versions=['py2', 'py3']) }}
@@ -26,7 +25,7 @@ BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('psutil', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Jinja2') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
@@ -67,9 +66,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{python_install}
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
